# mcp-rag-server

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
k8s/: mcp-server.yaml
mcp_server/: .dockerignore  chunking.py  deps.py  embeddings.py  ingest.py  main.py  parsers.py  server.py  settings.py  upload.py  vectorstore.py
tests/: test_chunking.py
