[project]
name = "mcp-rag-server"
version = "0.1.0"
description = "MCP RAG server with Qdrant vector search and local embeddings"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.8,<2",
    "qdrant-client>=1.12,<2",
    "sentence-transformers>=3.3,<4",
    "loguru>=0.7,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pymupdf>=1.25,<2",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "pylint>=3,<4",
]

[project.scripts]
mcp-rag = "mcp_server.main:main"
mcp-ingest = "mcp_server.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"mcp_server/server.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"